--- a/.github/workflows/build-macos-gpu.yaml
+++ b/.github/workflows/build-macos-gpu.yaml
@@ -3,131 +3,10 @@ name: Publish
 on:
   push:
     tags:
-      - "*.*.*"
+      - "*.*.*-gpu"
 
 jobs:
-  build-linux-dnf:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        arch: [amd64, arm64]
-        platform: [linux]
-    steps:
-      - name: Branch name
-        id: branch_name
-        run: |
-          echo ::set-output name=SOURCE_NAME::${GITHUB_REF#refs/*/}
-          echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
-          echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
-
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
-
-      - name: setup-qemu-action
-        uses: docker/setup-qemu-action@v1
-
-      - name: Install dependencies
-        run: |
-          docker run --entrypoint /bin/sh --name qemu --platform linux/${{ matrix.arch }} fedora:36 -c "dnf update -y && \
-          dnf install -y findutils patchelf qemu-${{ steps.branch_name.outputs.SOURCE_TAG }} && \
-          cd /root/ && \
-          curl -OL https://raw.githubusercontent.com/kymano-app/remote-viewer/master/fix_linux.sh && \
-          bash fix_linux.sh ${{ matrix.arch }} && \
-          mkdir bin && \
-          cp /usr/bin/qemu-img bin/ && \
-          cp /usr/bin/qemu-system-x86_64 bin/ && \
-          cp /usr/bin/qemu-system-aarch64 bin/ && \
-          mkdir share && \
-          p=/usr/share && find \$p/ipxe/ \$p/seabios \$p/seavgabios \$p/sgabios \$p/qemu | while read f ; do true | cp -L \$f share/; done && \
-          tar -czvf qemu-${{ steps.branch_name.outputs.SOURCE_TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz libs bin share"
-
-          sudo docker cp qemu:/root/qemu-${{ steps.branch_name.outputs.SOURCE_TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz .
-
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            *.tgz
-          prerelease: true
-
-  build-macos-ports:
-    if: false
-    name: Build0
-    runs-on: macos-11
-    strategy:
-      matrix:
-        arch: [amd64]
-        platform: [macos]
-        variants: ['+cocoa', '+gtk3 +sdl2']
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
-
-      - name: Install the Apple certificate and provisioning profile
-        env:
-          BUILD_CERTIFICATE_BASE64: ${{ secrets.P12 }}
-          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
-          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.PROVISIONING_PROFILE }}
-          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
-        run: |
-          # create variables
-          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
-          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-
-          # import certificate and provisioning profile from secrets
-          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode --output $CERTIFICATE_PATH
-          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode --output $PP_PATH
-
-          # create temporary keychain
-          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-
-          # import certificate to keychain
-          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-          security list-keychain -d user -s $KEYCHAIN_PATH
-
-          # apply provisioning profile
-          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
-
-      - name: Macports 0
-        run: |
-           wget https://github.com/macports/macports-base/releases/download/v2.7.1/MacPorts-2.7.1-11-BigSur.pkg
-           sudo installer -pkg ./MacPorts-2.7.1-11-BigSur.pkg -target /
-
-      - name: Install dependencies
-        run: |
-          export PATH="/opt/local/bin:$PATH" 
-
-          sudo port install qemu +curses +usb +curl +vnc +vde +lzo +lzfse +snappy +zstd +ssh ${{ matrix.variants }}
-          mkdir bin
-          cp /opt/local/bin/qemu-system-x86_64 bin/
-          cp /opt/local/bin/qemu-system-aarch64 bin/
-          cp /opt/local/bin/qemu-img bin/
-
-          chmod +x scripts/fix_mac.sh
-          scripts/fix_mac.sh
-      
-      - name: Compress
-        run: |
-          tar -czvf `echo "qemu-6.2-${{ matrix.platform }}-${{ matrix.arch }}${{ matrix.variants }}.tgz" | sed 's/ //g'` libs bin
-
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            *.tgz
-          prerelease: true
-
   build-qemu-macos:
-    if: false
     name: Build Qemu macos
     runs-on: macos-11
     strategy:
@@ -417,48 +296,6 @@ jobs:
           brew install bison nasm make meson
           rm -f /usr/local/lib/pkgconfig/*.pc
           ./scripts/build_dependencies.sh -p ${{ matrix.platform }} -a ${{ matrix.arch }}
-      - name: Compress Sysroot
-        if: steps.cache-sysroot.outputs.cache-hit != 'true' || github.event_name == 'release' || github.event.inputs.test_release == 'true'
-        run: tar cf sysroot.tgz sysroot*
-      - name: Upload Sysroot
-        if: steps.cache-sysroot.outputs.cache-hit != 'true' || github.event_name == 'release' || github.event.inputs.test_release == 'true'
-        uses: actions/upload-artifact@v2
-        with:
-          name: Sysroot-${{ matrix.platform }}-${{ matrix.arch }}
-          path: sysroot.tgz
-  
-  build-qemu-linux:
-    if: false
-    name: Build Qemu linux
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        arch: [arm64, x86_64]
-        platform: [linux]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - name: Cache Sysroot
-        id: cache-sysroot
-        uses: actions/cache@v2
-        with:
-          path: sysroot-${{ matrix.platform }}-${{ matrix.arch }}
-          key: ${{ matrix.platform }}-${{ matrix.arch }}-${{ hashFiles('scripts/build_dependencies.sh') }}-${{ hashFiles('patches/**') }}
-      - name: Setup Path
-        shell: bash
-        run: |
-          echo "/usr/local/opt/gettext/bin" >> $GITHUB_PATH
-          echo "/usr/local/opt/bison/bin" >> $GITHUB_PATH
-      - name: Build Sysroot
-        shell: bash
-        if: steps.cache-sysroot.outputs.cache-hit != 'true'
-        run: |
-          sudo apt-get remove -y cmake
-          sudo apt-get install -y bison pkg-config nasm make meson gettext libgpg-error-dev
-          rm -f /usr/local/lib/pkgconfig/*.pc
-          bash ./scripts/build_dependencies.sh -p ${{ matrix.platform }} -a ${{ matrix.arch }}
       - name: Compress Sysroot
         if: steps.cache-sysroot.outputs.cache-hit != 'true' || github.event_name == 'release' || github.event.inputs.test_release == 'true'
         run: tar cf sysroot.tgz sysroot*
