--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,7 +12,9 @@ jobs:
     steps:
       - name: Branch name
         id: branch_name
-        run: echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
+        run: |
+          echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/} && \
+          echo ${GITHUB_REF}
 
       - name: Install dependencies
         run: |
