--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,8 +14,10 @@ jobs:
         id: branch_name
         run: |
           echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/} && \
+          echo ::set-output name=SOURCE_TAG_OPTION::$(echo $GITHUB_REF | cut -d - -f 2) && \
           echo ${GITHUB_REF}
 
       - name: Install dependencies
         run: |
-          echo ${{ steps.branch_name.outputs.SOURCE_TAG }}
+          echo ${{ steps.branch_name.outputs.SOURCE_TAG }} && \
+          echo ${{ steps.branch_name.outputs.SOURCE_TAG_OPTION }}
