--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,7 +15,8 @@ jobs:
         run: |
           echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/} && \
           echo ::set-output name=SOURCE_TAG_OPTION::$(echo $GITHUB_REF | cut -d - -f 2) && \
-          if [[ `echo ${GITHUB_REF#refs/tags/} | cut -d - -f 2` == 'cocoa' ]]; then echo "ok"; fi
+          echo ${GITHUB_REF#refs/tags/} && \
+          if [[ `echo ${GITHUB_REF#refs/tags/} | cut -d - -f 2` == 'cocoa' ]]; then echo "ok"; fi && \
           echo ${GITHUB_REF}
 
       - name: test 1
