--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,10 +16,10 @@ jobs:
           echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/} && \
           echo ::set-output name=SOURCE_TAG_OPTION::$(echo $GITHUB_REF | cut -d - -f 2) && \
           echo ${GITHUB_REF#refs/tags/} && \
-          if [[ `echo ${GITHUB_REF#refs/tags/} | cut -d - -f 2` == 'cocoa' ]]; then echo "ok"; fi && \
+          if [[ `echo ${GITHUB_REF#refs/tags/} | cut -d - -f 2` == 'cocoa' ]]; then echo ::set-output name=VARIANT::$(echo '+cocoa'); fi && \
           echo ${GITHUB_REF}
 
       - name: test 1
         run: |
           echo ${{ steps.branch_name.outputs.SOURCE_TAG }} && \
-          echo ${{ steps.branch_name.outputs.SOURCE_TAG_OPTION }}
+          echo ${{ steps.branch_name.outputs.VARIANT }}
