--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,10 +14,7 @@ jobs:
         id: branch_name
         run: |
           echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/} && \
-          echo ::set-output name=SOURCE_TAG_OPTION::$(echo $GITHUB_REF | cut -d - -f 2) && \
-          echo ${GITHUB_REF#refs/tags/} && \
-          case `echo ${GITHUB_REF#refs/tags/} | cut -d - -f 2` in 'cocoa') echo ::set-output name=VARIANT::$(echo '+cocoa');; 'gtk3') echo ::set-output name=VARIANT::$(echo '+gtk3');; esac && \
-          echo ${GITHUB_REF}
+          case `echo ${GITHUB_REF#refs/tags/} | cut -d - -f 2` in 'cocoa') echo ::set-output name=VARIANT::$(echo '+cocoa');; 'gtk3') echo ::set-output name=VARIANT::$(echo '+gtk3');; esac
 
       - name: test 1
         run: |
