--- a/.github/workflows/build-macos-gpu.yaml
+++ b/.github/workflows/build-macos-gpu.yaml
@@ -6,8 +6,7 @@ on:
       - "*.*.*-gpu"
 
 jobs:
-  build-qemu-macos:
-    if: false
+  build:
     name: Build Qemu macos
     runs-on: macos-11
     strategy:
