--- a/.github/workflows/build-linux.yaml
+++ b/.github/workflows/build-linux.yaml
@@ -4,6 +4,10 @@ on:
   push:
     tags:
       - "*.*.*"
+    tags-ignore:
+      - "*.*.*-gpu"
+      - "*.*.*-cocoa"
+      - "*.*.*-gtk3"
 
 jobs:
   build:
