--- a/.github/workflows/build-macos-gpu-cocoa.yaml
+++ b/.github/workflows/build-macos-gpu-cocoa.yaml
@@ -3,7 +3,7 @@ name: Macos gpu cocoa
 on:
   push:
     tags:
-      - "*.*.*-gpu-cocoa$"
+      - "[0-9]+.[0-9]+.[0-9]+-gpu-cocoa"
 
 jobs:
   build:
