--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -3,8 +3,8 @@ name: Macos
 on:
   push:
     tags:
-      - "^*.*.*-cocoa"
-      - "^*.*.*-gtk3"
+      - "[0-9]+.[0-9]+.[0-9]+-cocoa"
+      - "[0-9]+.[0-9]+.[0-9]+-gtk3"
 
 jobs:
   build-macos-ports:
