--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,8 +3,8 @@ name: Test
 on:
   push:
     tags:
-      - "*.*.*-cocoa"
-      - "*.*.*-gtk3"
+      - "[0-9]+.[0-9]+.[0-9]+-cocoa"
+      - "[0-9]+.[0-9]+.[0-9]+-gtk3"
 
 jobs:
   test:
