--- a/.github/workflows/build-macos-gpu-cocoa.yaml
+++ b/.github/workflows/build-macos-gpu-cocoa.yaml
@@ -47,7 +47,10 @@ jobs:
       
       - name: Compress Sysroot
         if: steps.cache-sysroot.outputs.cache-hit != 'true' || github.event_name == 'release' || github.event.inputs.test_release == 'true'
-        run: zip qemu-${{ steps.branch_name.outputs.TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.zip sysroot*
+        run: |
+        cd sysroot-macOS-${{ matrix.arch }} && \
+        zip -r qemu-${{ steps.branch_name.outputs.TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.zip ./ && \
+        mv *.zip ../
       
       - name: Release
         uses: softprops/action-gh-release@v1
