--- a/.github/workflows/build-macos-gpu-cocoa.yaml
+++ b/.github/workflows/build-macos-gpu-cocoa.yaml
@@ -49,7 +49,7 @@ jobs:
         if: steps.cache-sysroot.outputs.cache-hit != 'true' || github.event_name == 'release' || github.event.inputs.test_release == 'true'
         run: |
           cd sysroot-macOS-${{ matrix.arch }} && \
-          zip -r qemu-${{ steps.branch_name.outputs.TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.zip ./ && \
+          zip -r --symlinks qemu-${{ steps.branch_name.outputs.TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.zip ./ && \
           mv *.zip ../
       
       - name: Release
