--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -82,5 +82,5 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            *.gtz
+            *.tgz
           prerelease: true
