--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -70,11 +70,11 @@ jobs:
           cp /opt/local/bin/qemu-system-x86_64 bin/
           cp /opt/local/bin/qemu-system-aarch64 bin/
           cp /opt/local/bin/qemu-img bin/
-          mkdir share && \
-          ls -l /opt/local/share/ && \
-          echo ':::::::::::::::::' && \
-          ls -l /usr/local/share/ && \
-          p=/usr/local/share && find \$p/ipxe/ \$p/seabios \$p/seavgabios \$p/sgabios \$p/qemu | while read f ; do true | cp -L \$f share/; done && \
+          mkdir share 
+          ls -l /opt/local/share/ 
+          echo ':::::::::::::::::'
+          ls -l /usr/local/share/
+          p=/usr/local/share && find \$p/ipxe/ \$p/seabios \$p/seavgabios \$p/sgabios \$p/qemu | while read f ; do true | cp -L \$f share/; done
           chmod +x scripts/fix_mac.sh
           scripts/fix_mac.sh
       
