--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -75,6 +75,7 @@ jobs:
           echo ':::::::::::::::::'
           ls -l /usr/local/share/
           find / -name efi-virtio.rom 2>/dev/null
+          find / -name efi-e1000.rom 2>/dev/null
           echo ':::::::::::::::::'
           p=/usr/local/share && find \$p/ipxe/ \$p/seabios \$p/seavgabios \$p/sgabios \$p/qemu | while read f ; do true | cp -L \$f share/; done
           chmod +x scripts/fix_mac.sh
