--- a/.github/workflows/build-linux.yaml
+++ b/.github/workflows/build-linux.yaml
@@ -37,8 +37,8 @@ jobs:
           cp /usr/bin/qemu-img bin/ && \
           cp /usr/bin/qemu-system-x86_64 bin/ && \
           cp /usr/bin/qemu-system-aarch64 bin/ && \
-          mkdir share && \
-          p=/usr/share && find \$p/ipxe/ \$p/seabios \$p/seavgabios \$p/sgabios \$p/qemu | while read f ; do true | cp -L \$f share/; done && \
+          mkdir -p share/qemu && \
+          p=/usr/share && find \$p/ipxe/ \$p/seabios \$p/seavgabios \$p/sgabios \$p/qemu | while read f ; do true | cp -L \$f share/qemu; done && \
           tar -czvf qemu-${{ steps.branch_name.outputs.SOURCE_TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz libs bin share"
 
           sudo docker cp qemu:/root/qemu-${{ steps.branch_name.outputs.SOURCE_TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz .
