--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -73,12 +73,10 @@ jobs:
           mkdir -p share/qemu
           ls -l /opt/local/share/ 
           echo ':::::::::::::::::'
-          ls -l /usr/local/share/
-          find / -name efi-virtio.rom 2>/dev/null
-          find / -name efi-e1000.rom 2>/dev/null
-          echo ':::::::::::::::::'
+          ls -l /usr/local/share/qemu
+          echo '#################'
           p=/usr/local/share && find $p/qemu | while read f ; do echo $f; true | cp -L $f share/qemu; done
-          echo ':::::::::::::::::'
+          echo '@@@@@@@@@@@@@@@@@@@'
           chmod +x scripts/fix_mac.sh
           scripts/fix_mac.sh
       
