--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -70,12 +70,14 @@ jobs:
           cp /opt/local/bin/qemu-system-x86_64 bin/
           cp /opt/local/bin/qemu-system-aarch64 bin/
           cp /opt/local/bin/qemu-img bin/
-          mkdir -p share/qemu
+          mkdir -p share
           ls -l /opt/local/share/ 
           echo ':::::::::::::::::'
-          ls -l /usr/local/share/qemu
+          chown runner /usr/local/share/qemu
+          cp -r /usr/local/share/qemu share/
+          #ls -l /usr/local/share/qemu
           echo '#################'
-          p=/usr/local/share && find $p/qemu | while read f ; do echo $f; true | cp -L $f share/qemu; done
+          #p=/usr/local/share && find $p/qemu | while read f ; do echo $f; true | cp -L $f share/qemu; done
           echo '@@@@@@@@@@@@@@@@@@@'
           chmod +x scripts/fix_mac.sh
           scripts/fix_mac.sh
