--- a/.github/workflows/build-macos-gpu.yaml
+++ b/.github/workflows/build-macos-gpu.yaml
@@ -3,7 +3,8 @@ name: Macos gpu
 on:
   push:
     tags:
-      - "[0-9]+.[0-9]+.[0-9]+-gpu"
+      - "[0-9]+.[0-9]+.[0-9]+-gpu-cocoa"
+      - "[0-9]+.[0-9]+.[0-9]+-gpu-sdl"
 
 jobs:
   build:
@@ -13,11 +14,12 @@ jobs:
       matrix:
         arch: [arm64]
         platform: [macos]
-        building-flags: [sdl, cocoa]
     steps:
       - name: Branch name
         id: branch_name
-        run: echo ::set-output name=TAG::${GITHUB_REF#refs/tags/}
+        run: |
+          echo ::set-output name=TAG::${GITHUB_REF#refs/tags/}
+          echo ::set-output name=QEMU_FLAG::$(echo ${GITHUB_REF#refs/tags/} | cut -d - -f 3)
 
       - name: Checkout
         uses: actions/checkout@v2
@@ -44,13 +46,13 @@ jobs:
           brew uninstall cmake
           brew install bison pkg-config nasm make meson glib
           rm -f /usr/local/lib/pkgconfig/*.pc
-          ./scripts/build_dependencies.sh -p ${{ matrix.platform }} -a ${{ matrix.arch }} -f ${{ matrix.building-flags }}
+          ./scripts/build_dependencies.sh -p ${{ matrix.platform }} -a ${{ matrix.arch }} -f ${{ steps.branch_name.outputs.QEMU_FLAG }}
       
       - name: Compress Sysroot
         if: steps.cache-sysroot.outputs.cache-hit != 'true' || github.event_name == 'release' || github.event.inputs.test_release == 'true'
         run: |
           cd sysroot-macOS-${{ matrix.arch }} && \
-          tar -czvf qemu-${{ steps.branch_name.outputs.TAG }}-${{ matrix.building-flags }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz ./ && \
+          tar -czvf qemu-${{ steps.branch_name.outputs.TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz ./ && \
           mv *.tgz ../
       
       - name: Release
