--- a/.github/workflows/build-macos-gpu.yaml
+++ b/.github/workflows/build-macos-gpu.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: macos-11
     strategy:
       matrix:
-        arch: [arm64]
+        arch: [arm64, x86_64]
         platform: [macos]
     steps:
       - name: Branch name
@@ -54,7 +54,7 @@ jobs:
           cd sysroot-macOS-${{ matrix.arch }} && \
           tar -czvf qemu-${{ steps.branch_name.outputs.TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz ./ && \
           mv *.tgz ../
-          
+
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
