--- a/.github/workflows/build-linux.yaml
+++ b/.github/workflows/build-linux.yaml
@@ -39,6 +39,8 @@ jobs:
           cp /usr/bin/qemu-system-aarch64 bin/ && \
           mkdir -p share && \
           cp -r /usr/share/qemu share/ && \
+          cp -r /usr/share/tabset share/ && \
+          cp -r /usr/share/terminfo share/ && \
           p=/usr/share && find \$p/ipxe/ \$p/seabios \$p/seavgabios \$p/sgabios \$p/qemu | while read f ; do true | cp -L \$f share/qemu; done && \
           tar -czvf qemu-${{ steps.branch_name.outputs.SOURCE_TAG }}-${{ matrix.platform }}-${{ matrix.arch }}.tgz libs bin share"
 
