--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -22,9 +22,6 @@ jobs:
           install: >-
             base-devel
             git
-      - name: Branch name
-        id: branch_name
-        run: echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
 
       - name: Checkout
         uses: actions/checkout@v2
@@ -33,4 +30,4 @@ jobs:
 
       - name: Install dependencies
         run: |
-          mingw64.exe
+          pacman -Syu
