--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -28,6 +28,6 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Install dependencies
+      - name: Install
         run: |
           pacman -Syu
