--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -32,13 +32,15 @@ jobs:
         run: |
           pacman -Syu
           pacman -Su
+          echo 'installing base-devel'
           pacman -S base-devel --noconfirm
+          echo 'installing mingw-w64-x86_64-toolchain'
           yes J | pacman -S mingw-w64-x86_64-toolchain --noconfirm
-          yes Y | pacman -S git --noconfirm
-          yes Y | pacman -S python --noconfirm
-          yes Y | pacman -S mingw-w64-x86_64-glib2 --noconfirm
-          yes Y | pacman -S mingw-w64-x86_64-gtk3 --noconfirm
-          yes Y | pacman -S mingw-w64-x86_64-SDL2 --noconfirm
+          pacman -S git --noconfirm
+          pacman -S python --noconfirm
+          pacman -S mingw-w64-x86_64-glib2 --noconfirm
+          pacman -S mingw-w64-x86_64-gtk3 --noconfirm
+          pacman -S mingw-w64-x86_64-SDL2 --noconfirm
           git clone git://git.qemu-project.org/qemu.git
           cd qemu
           git submodule update --init ui/keycodemapdb
