--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -36,7 +36,7 @@ jobs:
           pacman -S base-devel --noconfirm
           pacman -S mingw-w64-x86_64-winstorecompat-git --noconfirm
           echo 'installing mingw-w64-x86_64-toolchain'
-          yes J | pacman -S mingw-w64-x86_64-toolchain --noconfirm
+          pacman -S mingw-w64-x86_64-toolchain --noconfirm
           echo 'installing git'
           pacman -S git --noconfirm
           echo 'installing python'
