--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -40,8 +40,9 @@ jobs:
           pacman -S mingw-w64-x86_64-glib2 --noconfirm
           pacman -S mingw-w64-x86_64-gtk3 --noconfirm
           pacman -S mingw-w64-x86_64-SDL2 --noconfirm
-          git clone git://git.qemu-project.org/qemu.git --branch 6.2.0 --single-branch
-          cd qemu
+          curl -OL https://github.com/qemu/qemu/archive/refs/tags/v6.2.0.tar.gz
+          tar -xzf v6.2.0.tar.gz
+          cd qemu-6.2.0
           git submodule update --init ui/keycodemapdb
           git submodule update --init capstone
           git submodule update --init dtc
