--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -31,8 +31,7 @@ jobs:
       - name: ChildItem
         shell: pwsh
         run: |
-          cp /c/Program\ Files\ (x86)/Windows\ Kits/10/Include/10.0.14393.0/um/WinHv* /mingw64/x86_64-w64-mingw32/include/
-
+          "C:\Program Files (x86)\Windows Kits/10/Include/10.0.14393.0/um/WinHv*" /mingw64/x86_64-w64-mingw32/include/
       - name: Install 001
         if: false
         run: |
