--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: c1
         shell: pwsh
         run: |
-          ls -l "C:\Program Files"
+          ls -l "/mingw64/"
       
       - name: c2
         shell: pwsh
@@ -41,7 +41,8 @@ jobs:
       - name: c3
         shell: pwsh
         run: |
-          ls -l "C:\Program Files (x86)\Windows Kits/10/Include/10.0.14393.0/um/"
+          ls -l "C:\Program Files (x86)\Windows Kits/10/Include/10.0.22000.0/um/"
+          ls -l "C:\Program Files (x86)\Windows Kits/10/Include/10.0.20348.0/um/"
 
       - name: c4
         shell: pwsh
