--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -27,6 +27,14 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: recursive
+      - name: c1
+        shell: pwsh
+        run: |
+          ls -l "D:\a\_temp\msys64\mingw64"
+      - name: c1
+        shell: pwsh
+        run: |
+          ls -l "D:\a\_temp\msys64\"
 
       - name: Install 001
         if: false
@@ -61,6 +69,6 @@ jobs:
           cd qemu
           git submodule init
           git submodule update --recursive
-          ./configure --target-list=x86_64-softmmu,i386-softmmu --enable-whpx --enable-tools --enable-lzo --enable-bzip2\ --enable-sdl --enable-gtk --enable-vdi --enable-qcow1 --enable-hax --disable-capstone
+          ./configure --target-list=x86_64-softmmu,i386-softmmu --enable-whpx --enable-tools --enable-lzo --enable-bzip2 --enable-sdl --enable-gtk --enable-vdi --enable-qcow1 --enable-hax --disable-capstone
           make -j
           make install
