--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -65,6 +65,7 @@ jobs:
           pacman -Suy --noconfirm
           pacman -Sy --noconfirm base-devel mingw-w64-x86_64-gcc git python
           pacman -Sy --noconfirm mingw-w64-x86_64-glib2 mingw-w64-x86_64-gtk3 mingw-w64-x86_64-SDL2
+          pacman -Sy --noconfirm ninja
           git clone git://git.qemu-project.org/qemu.git --branch stable-6.1 --single-branch
           cd qemu
           git submodule init
